--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,1 @@
-sonar.projectKey=npm
-sonar.organization=devopshint
-sonar.sources=.
+sonar.projectKey=alokcbl_sonarqubenode_f267e578-dcfa-404d-b914-0828b8ca468d
